--- a/Styles/IntrodutionPage.css
+++ b/Styles/IntrodutionPage.css
@@ -19,11 +19,12 @@
 }
 
 .IntroductionPage_Welcome {
-    font-size: 50px;
+    font-size: 60px;
+    font-weight: 700;
     margin-left: 20px;
     margin-right: 20px;
     top: 20%;
     position: absolute;
     font-family: 'Alex Brush';
-    color: #4f0404;
+    color: #8B0000;
 }
