--- a/Styles/IntrodutionPage.css
+++ b/Styles/IntrodutionPage.css
@@ -23,8 +23,9 @@
     font-weight: 700;
     margin-left: 20px;
     margin-right: 20px;
-    top: 20%;
+    top: 0px;
     position: absolute;
     font-family: 'Alex Brush';
-    color: #8B0000;
+    color: #0f0f0f;
+    z-index: 999;
 }
